--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "sass-loader": "^8.0.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "editorconfig": "^0.15.3"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
