--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "bootstrap": "^4.5.0",
-    "normalize.css": "^8.0.1"
+    "bootstrap-icons": "^1.0.0-alpha4",
+    "jquery": "^3.5.1",
+    "normalize.css": "^8.0.1",
+    "popper.js": "^1.16.1"
   }
 }
