--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "parser": "babel-eslint",
   "rules": {
+    "class-methods-use-this": 0,
     "no-unused-vars": "warn",
     "quotes": [1, "single"]
   },
