--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.0.0-alpha4",
     "jquery": "^3.5.1",
+    "mobx": "^5.15.4",
     "normalize.css": "^8.0.1",
     "popper.js": "^1.16.1"
   }
