--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-loader": "^4.0.0",
     "eslint-plugin-import": "^2.20.1",
     "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
@@ -41,6 +42,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.10.2",
-    "normalize.css": "^8.0.1"
+    "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.0.0-alpha4",
+    "jquery": "^3.5.1",
+    "normalize.css": "^8.0.1",
+    "popper.js": "^1.16.1"
   }
 }
